--- a/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,9 +156,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/UI/HP_bar.HP_bar
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPacks.BP_HealthPacks
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -560,7 +560,7 @@ RichTextBlock.Render Transform=True
 RichTextBlock.Performance=True
 RichTextBlock.Navigation=True
 RichTextBlock.Localization=True
-TextBlock.Layout=True
+TextBlock.Layout=False
 TextBlock.Content=True
 TextBlock.Appearance=True
 TextBlock.Accessibility=True
@@ -573,6 +573,132 @@ TextBlock.Navigation=True
 TextBlock.Localization=True
 PropertyWrapper.Events=True
 K2Node_VariableSet.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+WBP_Restart_C.Appearance=True
+WBP_Restart_C.Input=True
+WBP_Restart_C.Interaction=True
+WBP_Restart_C.Designer=True
+WBP_Restart_C.Performance=True
+WBP_Restart_C.Layout=True
+WBP_Restart_C.Behavior=True
+WBP_Restart_C.Render Transform=True
+WBP_Restart_C.Localization=True
+WBP_Restart_C.Accessibility=True
+WBP_Restart_C.Clipping=True
+WBP_Restart_C.Navigation=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+K2Node_VariableGet.Events=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+Collectable_Pickup_BP_C.Default=True
+Collectable_Pickup_BP_C.Tick=True
+Collectable_Pickup_BP_C.Replication=True
+Collectable_Pickup_BP_C.Rendering=True
+Collectable_Pickup_BP_C.Collision=True
+Collectable_Pickup_BP_C.Actor=True
+Collectable_Pickup_BP_C.Input=True
+Collectable_Pickup_BP_C.HLOD=True
+Collectable_Pickup_BP_C.Physics=True
+Collectable_Pickup_BP_C.WorldPartition=True
+Collectable_Pickup_BP_C.Events=True
+BP_HealthPacks_C.Tick=True
+BP_HealthPacks_C.Replication=True
+BP_HealthPacks_C.Rendering=True
+BP_HealthPacks_C.Collision=True
+BP_HealthPacks_C.Actor=True
+BP_HealthPacks_C.Input=True
+BP_HealthPacks_C.HLOD=True
+BP_HealthPacks_C.Physics=True
+BP_HealthPacks_C.WorldPartition=True
+BP_HealthPacks_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionParticleColor.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionOneMinus.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+SceneComponent.Physics=False
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -634,7 +760,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/Pickups/UI
+ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -647,8 +773,19 @@ ContentBrowserDrawer.CurrentViewType=1
 InstalledPlugins=WMFCodecs
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/Pickups/UI/HP_bar
+MRUItem0=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPacks
 MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem2=/Engine/EngineMeshes/Cube
+MRUItem3=/Engine/EngineMaterials/EmissiveMeshMaterial
+MRUItem4=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Healthpack_Mat
+MRUItem5=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Tele_Effect
+MRUItem6=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat_Effect
+MRUItem7=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat
+MRUItem8=/Engine/EngineMaterials/DefaultMaterial
+MRUItem9=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/MI_Powerup_A_2
+MRUItem10=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
+MRUItem11=/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_Restart
+MRUItem12=/Game/LearningKit_Games/Blueprints/Pickups/UI/HP_bar
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -677,7 +814,7 @@ bEnableNamespaceEditorFeatures=True
 bEnableContextMenuTimeSlicing=False
 bFavorPureCastNodes=False
 SaveOnCompile=SoC_SuccessOnly
-bJumpToNodeErrors=False
+bJumpToNodeErrors=True
 bAllowExplicitImpureNodeDisabling=False
 bShowActionMenuItemSignatures=False
 bBlueprintNodeUniqueNames=False
@@ -775,15 +912,37 @@ TreeViewWidth=0.300000
 
 [DetailPropertyExpansion]
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Progress.BorderPadding\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Progress.BorderPadding\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Progress.BorderPadding\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Progress.BorderPadding\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Object=
+TextBlock="\"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Layout.Slot\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" "
+CanvasPanel="\"Object.Layout.Slot\" "
+WBP_Restart_C=
+UserWidget=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [AssetEditorToolkitTabLocation]
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
 /Game/LearningKit_Games/Blueprints/Pickups/UI/HP_bar.HP_bar=0
+/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_HP_bar.WBP_HP_bar=0
+/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP.Collectable_Pickup_BP=0
+/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_Restart.WBP_Restart=0
+/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/MI_Powerup_A_2.MI_Powerup_A_2=1
+/Engine/EngineMaterials/DefaultMaterial.DefaultMaterial=1
+/Engine/EngineMaterials/EmissiveMeshMaterial.EmissiveMeshMaterial=1
+/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat.TeleMat=1
+/Engine/EngineMeshes/Cube.Cube=1
+/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Healthpack_Mat.Healthpack_Mat=0
 
 [Directories2]
 UNR=../../../../../../Users/kindr/OneDrive/Documents/Unreal Projects/MP2_LevelDesign/UnrealLearningKit/Content/LearningKit_Games/Maps
@@ -1808,4 +1967,202 @@ SequencerWidgets.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.AO,MaterialEditorInstanceConstant.ParameterGroups.COLOR,MaterialEditorInstanceConstant.ParameterGroups.EMISSIVE,MaterialEditorInstanceConstant.ParameterGroups.Fresnel,MaterialEditorInstanceConstant.ParameterGroups.Global Static Component Mask Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.METAL,MaterialEditorInstanceConstant.ParameterGroups.NORMAL,MaterialEditorInstanceConstant.ParameterGroups.OPACITY,MaterialEditorInstanceConstant.ParameterGroups.ROUGHNESS
+MaterialInstanceConstant=
+StaticMesh=StaticMesh.ImportSettings.Mesh
+MeshNaniteSettings=
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+
+[MessageLog]
+LastLogListing=PIE
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
