destroy entities not properly called, health packs remain

--- a/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,9 +156,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPacks.BP_HealthPacks
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack.BP_HealthPack
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -699,6 +699,59 @@ StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
 SceneComponent.Physics=False
+StaticMeshComponent.RayTracing=True
+StaticMeshComponent.Replication=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.LeaderPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.PathTracing=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.PathTracing=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+BP_HealthPack_C.Tick=True
+BP_HealthPack_C.Replication=True
+BP_HealthPack_C.Rendering=True
+BP_HealthPack_C.Collision=True
+BP_HealthPack_C.Actor=True
+BP_HealthPack_C.Input=True
+BP_HealthPack_C.HLOD=True
+BP_HealthPack_C.Physics=True
+BP_HealthPack_C.WorldPartition=True
+BP_HealthPack_C.Events=True
+LandscapeEditorObject.New Landscape=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -773,19 +826,20 @@ ContentBrowserDrawer.CurrentViewType=1
 InstalledPlugins=WMFCodecs
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPacks
+MRUItem0=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack
 MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem2=/Engine/EngineMeshes/Cube
-MRUItem3=/Engine/EngineMaterials/EmissiveMeshMaterial
-MRUItem4=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Healthpack_Mat
-MRUItem5=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Tele_Effect
-MRUItem6=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat_Effect
-MRUItem7=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat
-MRUItem8=/Engine/EngineMaterials/DefaultMaterial
-MRUItem9=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/MI_Powerup_A_2
-MRUItem10=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
-MRUItem11=/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_Restart
-MRUItem12=/Game/LearningKit_Games/Blueprints/Pickups/UI/HP_bar
+MRUItem2=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPacks
+MRUItem3=/Engine/EngineMeshes/Cube
+MRUItem4=/Engine/EngineMaterials/EmissiveMeshMaterial
+MRUItem5=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Healthpack_Mat
+MRUItem6=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Tele_Effect
+MRUItem7=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat_Effect
+MRUItem8=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat
+MRUItem9=/Engine/EngineMaterials/DefaultMaterial
+MRUItem10=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/MI_Powerup_A_2
+MRUItem11=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
+MRUItem12=/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_Restart
+MRUItem13=/Game/LearningKit_Games/Blueprints/Pickups/UI/HP_bar
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -925,11 +979,15 @@ WBP_Restart_C=
 UserWidget=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
+SkeletalMeshComponent=
+SkinnedMeshComponent=
+CapsuleComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
@@ -943,6 +1001,7 @@ ActorComponent=
 /Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat.TeleMat=1
 /Engine/EngineMeshes/Cube.Cube=1
 /Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Healthpack_Mat.Healthpack_Mat=0
+/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack.BP_HealthPack=0
 
 [Directories2]
 UNR=../../../../../../Users/kindr/OneDrive/Documents/Unreal Projects/MP2_LevelDesign/UnrealLearningKit/Content/LearningKit_Games/Maps
@@ -1977,6 +2036,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.AO
 MaterialInstanceConstant=
 StaticMesh=StaticMesh.ImportSettings.Mesh
 MeshNaniteSettings=
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2165,4 +2225,29 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[LandscapeEdit]
+PaintToolStrength=0.300000012
+PaintBrushRadius=2048
+PaintBrushFalloff=0.5
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200
+bUseFlattenTarget=False
+FlattenTarget=0
+TerraceSmooth=9.99999975e-05
+TerraceInterval=1
+RampWidth=2000
+RampSideFalloff=0.400000006
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[DetailCategoriesAdvanced]
+StaticMeshComponent.Physics=False
+BP_HealthPack_C.Actor=False
 
