everything working for pt1

--- a/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,9 +160,12 @@ LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_HP_bar.WBP_HP_bar
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/BP_Pursuer.BP_Pursuer
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/AI/AI_BT/BT_AI.BT_AI
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTT_GetPatrolLocation.BTT_GetPatrolLocation
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Services/BTService_GetChaseTargetLocation.BTService_GetChaseTargetLocation
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTT_GetChaseLocation.BTT_GetChaseLocation
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTT_ChasePlayer.BTT_ChasePlayer
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/AI/AI_BT/BP_Pursuer_BT.BP_Pursuer_BT
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -935,6 +938,166 @@ UserDefinedEnum.Description=True
 UserDefinedEnum.Enumerators=True
 BP_Pursuer_C.Default=True
 BP_Pursuer_C.Networking=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Variable=False
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentTick=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=False
+BehaviorTreeGraphNode_Root.AI=True
+BlackboardData.Parent=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
+BTTask_Roam_C.Task=True
+BTTask_Roam_C.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+BP_Pursuer_BT_C.TransformCommon=True
+BP_Pursuer_BT_C.Animation=True
+BP_Pursuer_BT_C.Mesh=True
+BP_Pursuer_BT_C.Tick=True
+BP_Pursuer_BT_C.Default=True
+BP_Pursuer_BT_C.ComponentTick=True
+BP_Pursuer_BT_C.Clothing=True
+BP_Pursuer_BT_C.Physics=True
+BP_Pursuer_BT_C.Collision=True
+BP_Pursuer_BT_C.LeaderPoseComponent=True
+BP_Pursuer_BT_C.Lighting=True
+BP_Pursuer_BT_C.AnimationRig=True
+BP_Pursuer_BT_C.Deformer=True
+BP_Pursuer_BT_C.SkinWeights=True
+BP_Pursuer_BT_C.Rendering=True
+BP_Pursuer_BT_C.HLOD=True
+BP_Pursuer_BT_C.PathTracing=True
+BP_Pursuer_BT_C.Mobile=True
+BP_Pursuer_BT_C.Navigation=True
+BP_Pursuer_BT_C.RayTracing=True
+BP_Pursuer_BT_C.VirtualTexture=True
+BP_Pursuer_BT_C.Tags=True
+BP_Pursuer_BT_C.AssetUserData=True
+BP_Pursuer_BT_C.Replication=True
+BP_Pursuer_BT_C.ComponentReplication=True
+BP_Pursuer_BT_C.Activation=True
+BP_Pursuer_BT_C.Variable=True
+BP_Pursuer_BT_C.Cooking=True
+BP_Pursuer_BT_C.Character Movement (General Settings)=True
+BP_Pursuer_BT_C.Character Movement: Walking=True
+BP_Pursuer_BT_C.Character Movement: Jumping / Falling=True
+BP_Pursuer_BT_C.Character Movement (Networking)=True
+BP_Pursuer_BT_C.Character Movement: Swimming=True
+BP_Pursuer_BT_C.Character Movement: Flying=True
+BP_Pursuer_BT_C.Character Movement: Custom Movement=True
+BP_Pursuer_BT_C.Character Movement (Rotation Settings)=True
+BP_Pursuer_BT_C.Character Movement: Physics Interaction=True
+BP_Pursuer_BT_C.Character Movement=True
+BP_Pursuer_BT_C.Character Movement: Avoidance=True
+BP_Pursuer_BT_C.RootMotion=True
+BP_Pursuer_BT_C.Character Movement: NavMesh Movement=True
+BP_Pursuer_BT_C.NavMovement=True
+BP_Pursuer_BT_C.Velocity=True
+BP_Pursuer_BT_C.PlanarMovement=True
+BP_Pursuer_BT_C.MovementComponent=True
+BP_Pursuer_BT_C.Shape=True
+BP_Pursuer_BT_C.Character=True
+BP_Pursuer_BT_C.Camera=True
+BP_Pursuer_BT_C.Pawn=True
+BP_Pursuer_BT_C.Actor=True
+BP_Pursuer_BT_C.Input=True
+BP_Pursuer_BT_C.WorldPartition=True
+BP_Pursuer_BT_C.Events=True
+BP_Pursuer_BT_C.Materials=True
+Pursuer_AIController_BT_C.Tick=True
+Pursuer_AIController_BT_C.AI=True
+Pursuer_AIController_BT_C.ComponentTick=True
+Pursuer_AIController_BT_C.Tags=True
+Pursuer_AIController_BT_C.Replication=True
+Pursuer_AIController_BT_C.ComponentReplication=True
+Pursuer_AIController_BT_C.Activation=True
+Pursuer_AIController_BT_C.Variable=True
+Pursuer_AIController_BT_C.Cooking=True
+Pursuer_AIController_BT_C.Controller=True
+Pursuer_AIController_BT_C.Actor=True
+Pursuer_AIController_BT_C.Input=True
+Pursuer_AIController_BT_C.HLOD=True
+Pursuer_AIController_BT_C.Physics=True
+Pursuer_AIController_BT_C.WorldPartition=True
+Pursuer_AIController_BT_C.Events=True
+NiagaraActor.RayTracing=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.RayTracing=True
+BTTask_ChasePlayer_C.Task=True
+BTTask_ChasePlayer_C.Description=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+BlackboardData.Key=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+BTT_GetPatrolLocation_C.Task=True
+BTT_GetPatrolLocation_C.Description=True
+BTT_GetPatrolLocation_C.Default=True
+AIPerceptionStimuliSourceComponent.Variable=True
+AIPerceptionStimuliSourceComponent.Sockets=True
+AIPerceptionStimuliSourceComponent.AI Perception=True
+AIPerceptionStimuliSourceComponent.Tags=True
+AIPerceptionStimuliSourceComponent.ComponentTick=True
+AIPerceptionStimuliSourceComponent.ComponentReplication=True
+AIPerceptionStimuliSourceComponent.Cooking=True
+AIPerceptionStimuliSourceComponent.Events=True
+AIPerceptionStimuliSourceComponent.AssetUserData=True
+AIPerceptionStimuliSourceComponent.Replication=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+AIPerceptionComponent.AI Perception=True
+AIPerceptionComponent.Variable=True
+AIPerceptionComponent.Sockets=True
+AIPerceptionComponent.Tags=True
+AIPerceptionComponent.ComponentTick=True
+AIPerceptionComponent.ComponentReplication=True
+AIPerceptionComponent.Cooking=True
+AIPerceptionComponent.Events=True
+K2Node_BreakStruct.PinOptions=True
+BTT_GetChaseLocation_C.Default=True
+BTT_GetChaseLocation_C.Task=True
+BTT_GetChaseLocation_C.Description=True
+BTService_GetChaseTargetLocation_C.Description=True
+BTService_GetChaseTargetLocation_C.Service=True
+BTService_GetChaseTargetLocation_C.Default=True
+BTT_ChasePlayer_C.Task=True
+BTT_ChasePlayer_C.Description=True
+BTT_ChasePlayer_C.Default=True
+BTTask_ChasePlayer_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -997,7 +1160,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games
+ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1024,30 +1187,33 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/EAIState
-MRUItem1=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter
-MRUItem2=/Game/LearningKit_Games/Blueprints/BP_Pursuer
-MRUItem3=/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_HP_bar
-MRUItem4=/Game/LearningKit_Games/Blueprints/Pickups/BP_Collectible
-MRUItem5=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack
-MRUItem6=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem7=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPacks
-MRUItem8=/Engine/EngineMeshes/Cube
-MRUItem9=/Engine/EngineMaterials/EmissiveMeshMaterial
-MRUItem10=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Healthpack_Mat
-MRUItem11=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/Tele_Effect
-MRUItem12=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat_Effect
-MRUItem13=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/TeleMat
-MRUItem14=/Engine/EngineMaterials/DefaultMaterial
-MRUItem15=/Game/LearningKit_Games/Assets/Props/Powerups/Powerup_A/Material/MI_Powerup_A_2
-MRUItem16=/Game/LearningKit_Games/Blueprints/Pickups/Collectable_Pickup_BP
-MRUItem17=/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_Restart
-MRUItem18=/Game/LearningKit_Games/Blueprints/Pickups/UI/HP_bar
+MRUItem0=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTTask_ChasePlayer
+MRUItem1=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTT_ChasePlayer
+MRUItem2=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Services/BTService_GetChaseTargetLocation
+MRUItem3=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTT_GetChaseLocation
+MRUItem4=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem5=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Pursuer_AIController_BT
+MRUItem6=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTT_GetPatrolLocation
+MRUItem7=/Game/LearningKit_Games/Blueprints/AI/AI_BT/BBD_AI
+MRUItem8=/Game/LearningKit_Games/Blueprints/AI/AI_BT/BP_Pursuer_BT
+MRUItem9=/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTTask_Roam
+MRUItem10=/Game/LearningKit_Games/Blueprints/AI/AI_BT/BT_AI
+MRUItem11=/Game/LearningKit_Games/Blueprints/EAIState
+MRUItem12=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter
+MRUItem13=/Game/LearningKit_Games/Blueprints/BP_Pursuer
+MRUItem14=/Game/LearningKit_Games/Blueprints/Pickups/UI/WBP_HP_bar
+MRUItem15=/Game/LearningKit_Games/Blueprints/Pickups/BP_Collectible
+MRUItem16=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack
+MRUItem17=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPacks
+MRUItem18=/Engine/EngineMeshes/Cube
+MRUItem19=/Engine/EngineMaterials/EmissiveMeshMaterial
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1188,10 +1354,10 @@ UserWidget="\"Object.Layout.Slot\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StreamableRenderAsset=
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
-ActorComponent=
+ActorComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
 SkeletalMeshComponent=
 SkinnedMeshComponent=
 CapsuleComponent=
@@ -1202,6 +1368,14 @@ WBP_HP_bar_C="\"Object.Layout.Slot\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BlackboardData="\"Object.Blackboard\" "
+DataAsset="\"Object.Blackboard\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter=0
@@ -1218,6 +1392,13 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 /Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack.BP_HealthPack=0
 /Game/LearningKit_Games/Blueprints/Pickups/BP_Collectible.BP_Collectible=0
 /Game/LearningKit_Games/Assets/Characters/Character/Mesh/SK_EpicCharacter.SK_EpicCharacter=0
+/Game/LearningKit_Games/Blueprints/AI/AI_BT/Pursuer_AIController_BT.Pursuer_AIController_BT=0
+/Game/LearningKit_Games/Blueprints/AI/EAIState.EAIState=0
+/Game/LearningKit_Games/Blueprints/AI/BP_Pursuer.BP_Pursuer=0
+/Game/LearningKit_Games/Blueprints/AI/AI_BT/BBD_AI.BBD_AI=1
+/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTTask_Roam.BTTask_Roam=0
+/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTT_GetPatrolLocation.BTT_GetPatrolLocation=0
+/Game/LearningKit_Games/Blueprints/AI/AI_BT/Tasks/BTTask_ChasePlayer.BTTask_ChasePlayer=0
 
 [Directories2]
 UNR=../../../../../../Users/kindr/OneDrive/Documents/Unreal Projects/MP2_LevelDesign/UnrealLearningKit/Content/LearningKit_Games/Maps
@@ -2256,15 +2437,25 @@ StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 BP_Pursuer_C=BP_Pursuer_C.Physics.ConstraintsGroup
 SkeletalMeshComponent=BP_Pursuer_C.Physics.ConstraintsGroup
 PawnSensingComponent=BP_Pursuer_C.Physics.ConstraintsGroup
-CapsuleComponent=
-NiagaraActor=BP_Pursuer_C.Physics.ConstraintsGroup
-NiagaraFloat=BP_Pursuer_C.Physics.ConstraintsGroup
-LinearColor=BP_Pursuer_C.Physics.ConstraintsGroup
+CapsuleComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
+NiagaraActor=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
+NiagaraFloat=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
+LinearColor=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
 BrushComponent=BP_Pursuer_C.Physics.ConstraintsGroup
 NavMeshBoundsVolume=BP_Pursuer_C.Physics.ConstraintsGroup
 PropertyWrapper=BP_Pursuer_C.Physics.ConstraintsGroup
 K2Node_CallFunction=BP_Pursuer_C.Physics.ConstraintsGroup
 K2Node_VariableGet=BP_Pursuer_C.Physics.ConstraintsGroup
+K2Node_VariableSet=BP_Pursuer_C.Physics.ConstraintsGroup
+EdGraph=BP_Pursuer_C.Physics.ConstraintsGroup
+BP_Pursuer_BT_C=BP_Pursuer_C.Physics.ConstraintsGroup
+K2Node=BP_Pursuer_C.Physics.ConstraintsGroup
+Emitter=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
+BP_LearningKit_PlayerCharacter_C=BP_Pursuer_C.Physics.ConstraintsGroup
+AIPerceptionStimuliSourceComponent=BP_Pursuer_C.Physics.ConstraintsGroup
+BTT_GetChaseLocation_C=BP_Pursuer_C.Physics.ConstraintsGroup
+BTService_GetChaseTargetLocation_C=BP_Pursuer_C.Physics.ConstraintsGroup
+BTT_ChasePlayer_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2522,17 +2713,29 @@ StaticMeshComponent.Physics=False
 BP_HealthPack_C.Actor=False
 PropertyWrapper.Variable=False
 SkeletalMeshComponent.Animation=False
+BTService_GetChaseTargetLocation_C.Service=False
 
 [SelectionDetails]
 PreserveScaleRatio=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/LearningKit_Games/Blueprints/AI/AI_BT/BP_Pursuer_BT.BP_Pursuer_BT;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/LearningKit_Games/Blueprints/BP_Pursuer.BP_Pursuer;
+RecentlyPlaced=/Game/LearningKit_Games/Blueprints/AI/BP_Pursuer.BP_Pursuer;
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Pickups/BP_Collectible.BP_Collectible;
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack.BP_HealthPack;/Engine/Transient.ActorFactoryBlueprint_0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24
+Property=0.5
+Value=1
+
+[PropertyWindowExpansion]
+AIPerceptionComponent=
+ActorComponent=
+Object=
 
