--- a/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1522,7 +1522,7 @@ TreeViewWidth=0.300000
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Progress.BorderPadding\" "
 Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Layout.Slot\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" "
@@ -1535,9 +1535,9 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.B
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 SkeletalMeshComponent=
 SkinnedMeshComponent=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
@@ -1553,11 +1553,11 @@ DataAsset="\"Object.Blackboard\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode=
 AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" "
 BP_MortarProjectile_C=
-BP_Froge_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_Froge_C="\"Object.Replication.ReplicatedMovement\" "
 Character=
 Pawn=
 
@@ -2664,7 +2664,7 @@ StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 BP_Pursuer_C=BP_Pursuer_C.Physics.ConstraintsGroup
 SkeletalMeshComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 PawnSensingComponent=BP_Pursuer_C.Physics.ConstraintsGroup
-CapsuleComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+CapsuleComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 NiagaraActor=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
 NiagaraFloat=
 LinearColor=
@@ -2692,7 +2692,7 @@ SceneComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.Con
 StaticMeshActor=BP_Pursuer_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 BP_Explosion_C=BP_Pursuer_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
 InstancedFoliageActor=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
-BP_Froge_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+BP_Froge_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 AIPerceptionComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup
 BTT_GetPatrolLocation_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup
 BTT_GetPatrolLocationFroge_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup
