knockback implemented no control delay

--- a/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -161,10 +161,10 @@ LastLevel=/Game/LearningKit_Games/Maps/MP2_LevelPt2
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge.BP_Froge
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion.BP_Explosion
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT.BP_Pursuer_BT
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy.BP_MortarEnemy
-OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion.BP_Explosion
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge.BP_Froge
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1306,8 +1306,8 @@ BlueprintEditorProjectSettings=True
 GameMapsSettings=True
 
 [RootWindow]
-ScreenPosition=X=161.143 Y=84.000
-WindowSize=X=1297.714 Y=737.714
+ScreenPosition=X=158.857 Y=84.000
+WindowSize=X=1300.572 Y=740.571
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1357,7 +1357,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge
+ContentBrowserDrawer.SelectedPaths=/Game/LearningKit_Games/Blueprints/PlayerCharacter
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1391,18 +1391,18 @@ AssetDialog.CurrentViewType=1
 InstalledPlugins=WMFCodecs
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion
+MRUItem0=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge
 MRUItem1=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy
-MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/PM_Froge_NoBounce
-MRUItem3=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Services/BTService_GetChaseTargetLocation
-MRUItem4=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT
-MRUItem5=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarProjectile
-MRUItem6=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BT_AI
-MRUItem7=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetPatrolLocation
-MRUItem8=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_MovetoPatrolPoint
-MRUItem9=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge
-MRUItem10=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BT_Froge
-MRUItem11=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT
+MRUItem3=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion
+MRUItem4=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarProjectile
+MRUItem5=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem6=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/PM_Froge_NoBounce
+MRUItem7=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Services/BTService_GetChaseTargetLocation
+MRUItem8=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BT_AI
+MRUItem9=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetPatrolLocation
+MRUItem10=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_MovetoPatrolPoint
+MRUItem11=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BT_Froge
 MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem13=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BBD_Froge
 MRUItem14=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_ChasePlayer
@@ -2709,7 +2709,7 @@ BP_MortarProjectile_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCom
 Blueprint=
 SceneComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
 StaticMeshActor=BP_Pursuer_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
-BP_Explosion_C=BP_Pursuer_C.Physics.ConstraintsGroup,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision
+BP_Explosion_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 InstancedFoliageActor=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup
 BP_Froge_C=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,BP_Froge_C.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 AIPerceptionComponent=BP_Pursuer_C.Physics.ConstraintsGroup,BP_Pursuer_BT_C.Physics.ConstraintsGroup,BP_Froge_C.Physics.ConstraintsGroup,BP_Froge_C.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,SphereComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
