knock backs all working

--- a/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealLearningKit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -165,6 +165,7 @@ OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion.BP_Expl
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT.BP_Pursuer_BT
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy.BP_MortarEnemy
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge.BP_Froge
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack.BP_HealthPack
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1391,26 +1392,26 @@ AssetDialog.CurrentViewType=1
 InstalledPlugins=WMFCodecs
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge
-MRUItem1=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy
-MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT
-MRUItem3=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion
-MRUItem4=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarProjectile
-MRUItem5=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem6=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/PM_Froge_NoBounce
-MRUItem7=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Services/BTService_GetChaseTargetLocation
-MRUItem8=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BT_AI
-MRUItem9=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetPatrolLocation
-MRUItem10=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_MovetoPatrolPoint
-MRUItem11=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BT_Froge
-MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem13=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BBD_Froge
-MRUItem14=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_ChasePlayer
-MRUItem15=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetChaseLocation
-MRUItem16=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_GetPatrolLocation
-MRUItem17=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_AI_Controller
-MRUItem18=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Pursuer_AIController_BT
-MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Mesh/FrogBlacks
+MRUItem0=/Game/LearningKit_Games/Blueprints/Pickups/BP_HealthPack
+MRUItem1=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge
+MRUItem2=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarEnemy
+MRUItem3=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BP_Pursuer_BT
+MRUItem4=/Game/LearningKit_Games/Blueprints/Effects/BP_Explosion
+MRUItem5=/Game/LearningKit_Games/Blueprints/Enemies/BP_MortarProjectile
+MRUItem6=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem7=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/PM_Froge_NoBounce
+MRUItem8=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Services/BTService_GetChaseTargetLocation
+MRUItem9=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/BT_AI
+MRUItem10=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetPatrolLocation
+MRUItem11=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_MovetoPatrolPoint
+MRUItem12=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BT_Froge
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BBD_Froge
+MRUItem15=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_ChasePlayer
+MRUItem16=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Tasks/BTT_GetChaseLocation
+MRUItem17=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_Tasks/BTT_GetPatrolLocation
+MRUItem18=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/Froge_AI_Controller
+MRUItem19=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_BT/Pursuer_AIController_BT
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1555,8 +1556,8 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
-SkeletalMeshComponent=
-SkinnedMeshComponent=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
@@ -2989,7 +2990,7 @@ SkeletalMeshComponent.Physics=True
 CapsuleComponent.Physics=True
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [PlacementMode]
 RecentlyPlaced=/Game/LearningKit_Games/Blueprints/Enemies/AI/AI_Froge/BP_Froge.BP_Froge;
